--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ function MM_swapImage() { //v3.0
 </head>
 <body onLoad="MM_preloadImages('OIP.jfif')">
     <header>
-        <h1>Información sñobre el Dengue</h1>
+        <h1>Información sobre el Dengue</h1>
     </header>
 
     <div class="content">
